# telegram-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  makefile  manage.py  pyproject.toml  requirements.in
mrpodcaster/: asgi.py  settings.py  urls.py  wsgi.py
mrpodcaster/api/: admin.py  apps.py  models.py
mrpodcaster/api/migrations/: 0001_initial.py  0002_initial.py
mrpodcaster/api/telegram/: bot.py  middleware.py  routers.py  utils.py
mrpodcaster/api/telegram/dialogs/: main.py  podcast.py  set_level.py  view_podcast.py
mrpodcaster/authentication/: admin.py  apps.py  models.py
mrpodcaster/authentication/migrations/: 0001_initial.py
template/: asgi.py  settings.py  urls.py  wsgi.py
template/api/: admin.py  apps.py  models.py
template/api/telegram/: bot.py  middleware.py  routers.py  utils.py
template/api/telegram/dialogs/: main.py  set_level.py
template/authentication/: admin.py  apps.py  models.py
template/authentication/migrations/: 0001_initial.py  0002_alter_templateuser_telegram_id.py
