[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
aiogram = "^3.6.0"
django-asgi-lifespan = "^0.3.1"
redis = "^5.0.4"
uvicorn = "^0.29.0"
django-environ = "^0.11.2"
gunicorn = "^22.0.0"
django-jazzmin = "^3.0.0"
aiogram-dialog = "^2.1.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
