[tool.poetry]
name = "mrpodcaster"
version = "0.1.0"
description = ""
authors = ["mrmamongo <mrmamongo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
aiogram = "^3.7.0"
aiogram-dialog = "^2.1.0"
django-asgi-lifespan = "^0.3.1"
redis = "^5.0.4"
ruff = "^0.4.7"
uvicorn = "^0.30.1"
django-environ = "^0.11.2"
django-jazzmin = "^3.0.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
